SetUrlValues ignore nil; return MustJson
fix ghttp Proxy
add ghttp SetClient
fix Remove
fix log
optimize log
add ContainsFieldValue
optimize SetUrlValue
add conf array support
add conf GetSlice
add log success