@@ -21,5 +21,5 @@ app:
     director: log
     # log max day
     max-age: 7
-    #　log in console/file/all
+    #　log in terminal/file/all
     log-in: all
