@@ -9,3 +9,4 @@ optimize SetUrlValue
 add conf array support
 add conf GetSlice
 add log success
+split log file/terminal color
